--- a/conFusion/src/app/home/home.component.html
+++ b/conFusion/src/app/home/home.component.html
@@ -18,6 +18,9 @@
     </p>
   </md-card-content>
 </md-card>
+<div [hidden]="dish">
+    <md-spinner></md-spinner><h4>Loading . . . Please Wait</h4>
+  </div>
 
 <md-card *ngIf="promotion" fxFlex>
   <md-card-header>
@@ -33,6 +36,10 @@
   </md-card-content>
 </md-card>
 
+<div [hidden]="promotion">
+    <md-spinner></md-spinner><h4>Loading . . . Please Wait</h4>
+  </div>
+
 <md-card *ngIf="leader" fxFlex>
   <md-card-header>
     <div md-card-avatar></div>
@@ -46,5 +53,7 @@
     </p>
   </md-card-content>
 </md-card>
-
+<div [hidden]="leader">
+    <md-spinner></md-spinner><h4>Loading . . . Please Wait</h4>
+  </div>
 </div>
