--- a/conFusion/src/app/dishdetail/dishdetail.component.html
+++ b/conFusion/src/app/dishdetail/dishdetail.component.html
@@ -6,9 +6,9 @@
     fxLayoutGap="10px" 
     fxLayoutGap.xs="0">
 
-  <div fxFlex="40">
-    <div fxFlex *ngIf="dish">
-	 	<md-card>
+  
+    <div fxFlex="40" *ngIf="dish">
+    <md-card>
 	 		<md-card-header>
 	 			<md-card-title>
 	 				<h3>{{ dish.name | uppercase }}</h3>
@@ -20,18 +20,21 @@
 	 			<p>{{ dish.description }}</p>
 	 		</md-card-content>
 	 		<md-card-actions>
-	 			<button md-button (click)="goBack()">BACK</button>
-	 			<button md-button>LIKE</button>
-	 			<button md-button>SHARE</button>
-	 		</md-card-actions>
-	 	</md-card>
-	 </div>
+        <button md-button [routerLink]="['/dishdetail', prev]"><span class="fa fa-chevron-left fa-lg"></span></button>
+        <button md-button (click)="goBack()">BACK</button>
+        <button md-button>LIKE</button>
+        <button md-button>SHARE</button>
+        <span class="flex-spacer"></span>
+        <button md-button [routerLink]="['/dishdetail', next]"><span class="fa fa-chevron-right fa-lg"></span></button>
+      </md-card-actions>
+    </md-card>
   </div>
 
-  <div fxFlex="40">
-    <div fxFlex *ngIf="dish">
+
+  <div fxFlex="40" *ngIf="dish">
+    <md-list>
     	<h3>Comments</h3>
-	 	<md-list>
+	 	
 	 		
   			<md-list-item *ngFor="let comment of dish.comments">
 	    		<p md-line>
@@ -43,7 +46,7 @@
   			</md-list-item>
 		</md-list>
 	 </div>
-  </div>
+  
 <div [hidden]="dish">
     <md-spinner></md-spinner><h4>Loading . . . Please Wait</h4>
   </div>
