--- a/conFusion/src/app/dishdetail/dishdetail.component.html
+++ b/conFusion/src/app/dishdetail/dishdetail.component.html
@@ -31,8 +31,9 @@
   </div>
 
 
-  <div fxFlex="40" *ngIf="dish">
-    <md-list>
+  	<div fxFlex="40" *ngIf="dish">
+  	
+  		<md-list>
     	<h3>Comments</h3>
 	 	
 	 		
@@ -44,10 +45,45 @@
 	    		<p md-line><span>-- {{comment.author}}  {{comment.date| date}}</span>
 	    		</p>
   			</md-list-item>
+  			
+		<md-list-item *ngIf="commentForm.$valid && !commentForm.$pristine">
+	    		 <p md-line>{{commentForm.value.comment}}</p>
+            <p md-line>{{commentForm.value.rating}} Stars</p>
+            <p md-line>--{{commentForm.value.name}}  </p>
+  			</md-list-item>
 		</md-list>
+		<p>{{ commentForm.value | json }} {{ commentForm.status | json }}</p>
+
+          <form novalidate [formGroup]="commentForm" (ngSubmit)="onSubmit()">
+          <p>
+            <md-input-container class="full-width"
+             dividerColor="{{(formErrors.author) ? 'warn' : 'primary'}}">
+              <input mdInput formControlName="author" placeholder="Name" type="text" required>
+              <md-hint>
+                <span [hidden]="!(formErrors.author)">
+                  {{formErrors.author}}</span>
+              </md-hint>
+            </md-input-container>
+        </p>
+
+        <md-slider thumbLabel tickInterval="1" min="1" max="5" step="1" value="5" mdInput formControlName="rating" ></md-slider>
+
+        <p>
+            <md-input-container class="full-width">
+              <textarea mdInput formControlName="comment" placeholder="Your Comment" rows=12></textarea>
+              <md-hint>
+                <span [hidden]="!(formErrors.comment)">
+                  {{formErrors.comment}}</span>
+              </md-hint>
+            </md-input-container>
+          </p>
+        <button type="submit" md-button class="background-primary text-floral-white" [disabled]="commentForm.invalid">Submit</button>
+        
+    </form>
 	 </div>
-  
-<div [hidden]="dish">
-    <md-spinner></md-spinner><h4>Loading . . . Please Wait</h4>
-  </div>
+
+	<div [hidden]="dish">
+    	<md-spinner></md-spinner><h4>Loading . . . Please Wait</h4>
+  	</div>
+
 </div>
